Added a test section

--- a/index.html
+++ b/index.html
@@ -52,8 +52,17 @@
       Project Tasks
     </div>
 
+    <h2>Plain Jane Ruby</h2>
+
+
+	<p>Imagine if instead of writing <span class="caps">SQL</span>, you could write Ruby.  Instead of writing <span class="caps">LDAP</span>, you
+could write Ruby.  Instead of learning some esoteric <span class="caps">API</span>, you just stick to one you know 
+and love.</p>
+
+
     <h2>Contact</h2>
-<p> (chris.c.muller@gmail.com)<br/>      </p>
+<p> (chris.c.muller@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
