--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       Project Tasks
     </div>
 
-    	<p>Imagine if instead of writing <span class="caps">SQL</span>, you could write Ruby.  Instead of writing <span class="caps">LDAP</span>, you
+    	<p>Imagine if instead of writing SQL, you could write Ruby.  Instead of writing LDAP, you
 could write Ruby.  Instead of learning some esoteric <span class="caps">API</span>, you just stick to one you know 
 and love.</p>
 
