--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     	<p>Imagine if instead of writing SQL, you could write Ruby.  Instead of writing LDAP, you
-could write Ruby.  Instead of learning some esoteric <span class="caps">API</span>, you just stick to one you know 
+could write Ruby.  Instead of learning some esoteric API, you just stick to one you know 
 and love.</p>
 
 
