--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <span class="small">by <a href="http://github.com/ccmballroom">ccmballroom</a></span></h1>
 
     <div class="description">
-      Project Tasks
+      Project Tasks @
     </div>
 
     	<p>Imagine if instead of writing SQL, you could write Ruby.  Instead of writing LDAP, you
